# filament

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release-linux.yml  release-macos.yml
crates/filament/: Cargo.toml
crates/filament-core/: Cargo.toml
crates/filament-core/src/: automation.rs  backend.rs  config.rs  discovery.rs  error.rs  frontmatter.rs  git.rs  github.rs  gitlab.rs  ipc.rs  jira.rs  lib.rs  parse.rs  provider.rs  scope.rs  session.rs  validate.rs  workspace.rs
crates/filament-core/src/edit/: atomic_write.rs  frontmatter_edit.rs  json_edit.rs  mod.rs
crates/filament-core/src/model/: agent.rs  command.rs  enums.rs  hook.rs  mcp.rs  mod.rs  model_id.rs  settings.rs  skill.rs  tools.rs
crates/filament-core/tests/: discovery.rs  discovery_advanced.rs  parse_agent.rs  parse_kinds.rs  precedence.rs  resolution.rs  roundtrip.rs  session.rs
crates/filament-core/tests/common/: mod.rs
crates/filament-core/tests/fixtures/home/.claude/agents/: code-reviewer.md  researcher.md
crates/filament-core/tests/fixtures/workspace_a/: .mcp.json
crates/filament-core/tests/fixtures/workspace_a/.claude/: settings.json
crates/filament-core/tests/fixtures/workspace_a/.claude/agents/: broken.md  code-reviewer.md  debugger.md
crates/filament-core/tests/fixtures/workspace_a/.claude/commands/: note.md  release.md
crates/filament-core/tests/fixtures/workspace_a/.claude/skills/deploy/: SKILL.md
crates/filament-core/tests/fixtures/workspace_a/.claude/skills/format-code/: SKILL.md
crates/filament-terminal/: Cargo.toml
crates/filament-terminal/src/: backend.rs  bindings.rs  font.rs  terminal.rs  theme.rs  view.rs
crates/filament/src/: app.rs  cli.rs  editor.rs  icon.rs  inspector.rs  ipc_server.rs  logging.rs  main.rs  prefs.rs  scaffold.rs  search.rs  sessions.rs  settingsview.rs  sidebar.rs  terminal.rs  theme.rs  watcher.rs  widgets.rs  wizard.rs
docs/: RUNNING.md
packaging/macos/: Info.plist
