[workspace]
resolver = "2"
members = ["crates/filament-core"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.94"
repository = "https://github.com/sessa/filament"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
thiserror = "2"
walkdir = "2.5"
directories = "6"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
