[workspace]
resolver = "2"
members = ["crates/filament-core", "crates/filament", "crates/filament-terminal"]

[workspace.package]
edition = "2021"
version = "0.2.5"
license = "MIT"
rust-version = "1.94"
repository = "https://github.com/sessa/filament"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
thiserror = "2"
walkdir = "2.5"
directories = "6"
tempfile = "3"

# UI / binary
filament-core = { path = "crates/filament-core" }
filament-terminal = { path = "crates/filament-terminal" }
log = { version = "0.4", features = ["std"] }
iced = { version = "0.14", features = ["markdown", "highlighter"] }
iced_highlighter = "0.14"
rfd = "0.15"
nucleo = "0.5"
notify = "8"
notify-debouncer-full = "0.7"

[profile.release]
lto = "thin"
strip = true
