[package]
name = "filament-core"
description = "Discovery, parsing, and lossless editing of Claude Code configuration (agents, skills, commands, MCP servers, settings)."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
